hphp/test/slow/namespace/autoimport.php.expectf
Fatal error: unknown class Container in %s/test/slow/namespace/autoimport.php on line 7